--- a/.pylintrc
+++ b/.pylintrc
@@ -1,14 +1,15 @@
 [MAIN]
 
 disable=
-      CO116, #missing docstring 
       E0015, # unrecognized-option
       C0114, # missing-module-docstring
       W0703, # Catching too general exception
       C0209, # Consider using 'format()' instead of '%s'
       C0321, # Multiple-statements
       W0221, # Arguments-differ
-      R0801, # Similar lines
+      R0801, # Similar lines,
+      R0903, # Too few public methods
+      
 
 # Analyse import fallback blocks. This can be used to support both Python 2 and
 # 3 compatible code, which means that the block might have code that exists
