--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ platformdirs==4.3.6
 pluggy==1.5.0
 pre_commit==4.1.0
 pylint==3.3.4
+PyMySQL==1.1.1
 pytest==8.3.4
 PyYAML==6.0.2
 SQLAlchemy==2.0.38
