--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 astroid==3.3.8
+cffi==1.17.1
 cfgv==3.4.0
+cryptography==44.0.2
 dill==0.3.9
 distlib==0.3.9
 filelock==3.17.0
@@ -13,6 +15,7 @@ packaging==24.2
 platformdirs==4.3.6
 pluggy==1.5.0
 pre_commit==4.1.0
+pycparser==2.22
 pylint==3.3.4
 PyMySQL==1.1.1
 pytest==8.3.4
