feat: create app in docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,14 @@
 services:
+  app:
+    build: .
+    environment:
+      HOST: "localhost"
+      PORT: 8080
+    ports:
+      - 8080:8080
+    depends_on:
+      - database
+
   database:
     image: mysql
     restart: always
