--- a/.pylintrc
+++ b/.pylintrc
@@ -9,6 +9,11 @@ disable=
       W0221, # Arguments-differ
       R0801, # Similar lines,
       R0903, # Too few public methods
+      W9020, # Useless type doc
+      W9019, # Useless param doc
+      R1711, # Useless return
+      W9006, # Missing raises doc
+
       
 
 # Analyse import fallback blocks. This can be used to support both Python 2 and
